# co2-analysis

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
co2_analysis/: __init__.py  dataset.py  features.py  plots.py
co2_analysis/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_EDA.ipynb  02_data_cleaning.ipynb  03_CO2_data_transformation.ipynb
