[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "co2_analysis"
version = "0.0.1"
description = "A time series analysis project that aims to understand and forecast temporal patterns of CO2 concentration using relevant meteorological variables."
authors = [
  { name = "Sushrut Gaikwad, Pooja Patil, Om Nankar, Aayushi Pandey" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["co2_analysis"]
force_sort_within_sections = true
